/// <summary>
/// Анимации помощника.
/// </summary>
public enum HelperAnimation 
{
    /// <summary>
    /// Приветствуем юный исследователь.
    /// </summary>
    IntroductionHello,
    /// <summary>
    /// О Царицыне.
    /// </summary>
    IntroductionAboutCity,
    /// <summary>
    /// Выбор исторической личности.
    /// </summary>
    IntroductionChoosePerson,
    /// <summary>
    /// Страница личности.
    /// </summary>
    Person,
    /// <summary>
    /// Неверный ответ 1.
    /// </summary>
    WrongAnswerAttemp_1,
    /// <summary>
    /// Неверный ответ 2.
    /// </summary>
    WrongAnswerAttemp_2,
    /// <summary>
    /// Неверный ответ 3. 
    /// </summary>
    WrongAnswerAttemp_3,
    /// <summary>
    /// Верный ответ.
    /// </summary>
    RightAnswer,
    /// <summary>
    /// Конец экскурсии.
    /// </summary>
    End,
    /// <summary>
    /// Результаты.
    /// </summary>
    Results,
    /// <summary>
    /// Подтверждение закрытия приложения.
    /// </summary>
    QuitAppConfirm,
    /// <summary>
    /// Закрытие приложения.
    /// </summary>
    QuitApp
}
